--- a/src/app/main/line-chart/line/line.component.html
+++ b/src/app/main/line-chart/line/line.component.html
@@ -2,13 +2,13 @@
     <example-comp comp-name="LINE_CHART.LINE_BASIC" comp-desc="LINE_CHART.LINE_BASIC.DESC" [files]="getBasicUsageFiles()"
         layout-fill>
         <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT"
-            x-data-type="time"></o-chart>
+            x-data-type="time" [chart-parameters]="chartParameters1"></o-chart>
     </example-comp>
 
     <example-comp comp-name="LINE_CHART.LINE_CUSTOM" comp-desc="LINE_CHART.LINE_CUSTOM.DESC" [files]="getBasicUsageConfFiles()"
         layout-fill>
         <o-chart #lineChartBasic type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_"
-            y-axis="MOVEMENT" [chart-parameters]="chartParameters" x-data-type="time"></o-chart>
+            y-axis="MOVEMENT" [chart-parameters]="chartParameters2" x-data-type="time"></o-chart>
     </example-comp>
 
     <example-comp comp-name="LINE_CHART.LINE_SERIES" comp-desc="LINE_CHART.LINE_SERIES.DESC" [files]="getCustomDataFiles()"
