--- a/src/app/shared/highlight/highlight.component.html
+++ b/src/app/shared/highlight/highlight.component.html
@@ -1,4 +1,4 @@
-<section highlight-js-content="code.highlight" fxFill>
+<section hljsContent=".highlight" fxFill>
   <pre class="snippet" fxFill>
     <button mat-icon-button id="copy-btn" class="copy-btn" data-clipboard-target="#code">
       <mat-icon aria-label="Copy to clipboard">file_copy</mat-icon>
