Adapting UX design changes

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<o-app-layout>
+<o-app-layout show-header="false">
   <o-app-layout-sidenav>
   </o-app-layout-sidenav>
   <router-outlet></router-outlet>
