--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -1,6 +1,6 @@
 
 .mat-sidenav-container{
-  background-color:#FAFAFA;
+  background-color:#ffffff;
 }
 
 .mat-sidenav-graphic-gui {
@@ -19,12 +19,39 @@
   height: 100%;
 }
 
+.mat-sidenav {
+  min-width: 10%;
+  left: 0;
+  top: 0;
+  visibility: visible !important;
+  .o-form {
+    display: none;
+  }
+  &.mat-drawer-side {
+    transform: none;
+  }
+  &.mat-drawer-opened {
+    .o-form {
+      display: block;
+    }
+  }
+}
+
+.mat-sidenav-content {
+  margin-left: 20px;
+  z-index: 9;
+}
+
 .dialog-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
   h2 {
     font-size: 20px;
+  }
+  .main-menu {
+    position: absolute;
+    top: -5px;
+    right: 0;
+    .active { color: #1464a5; }
   }
 }
 
@@ -34,8 +61,9 @@
   .mat-sidenav-container {
     flex: none;
     svg {
-      width: 100%;
-      height: 100%;
+      margin: 24px;
+      width: calc(100% - 48px);
+      height: calc(100% - 48px);
     }
   }
 }
