--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -1,6 +1,7 @@
 
 .mat-sidenav-container{
   background-color:#ffffff;
+  animation: all 1s ease-out;
 }
 
 .mat-sidenav-graphic-gui {
@@ -14,16 +15,21 @@
   background-color: #ffffff;
   border-radius: 4px;
   border: 1px solid #dddddd;
-  margin-left: 24px;
   box-shadow: 0px 2px 4px #00000029;
   height: 100%;
+  margin-left: 0px;
+  &.opened {
+    margin-left: 24px;
+  }
 }
 
 .mat-sidenav {
   min-width: 10%;
-  left: 0;
-  top: 0;
+  left: 16px;
+  top: 8px;
   visibility: visible !important;
+  z-index: 999;
+  border: 0;
   .o-form {
     display: none;
   }
@@ -31,6 +37,11 @@
     transform: none;
   }
   &.mat-drawer-opened {
+    border: 1px solid #DEE1E6;
+    border-radius: 4px;
+    top: 0;
+    left: 0;
+    padding: 8px 16px;
     .o-form {
       display: block;
     }
@@ -38,19 +49,25 @@
 }
 
 .mat-sidenav-content {
-  margin-left: 20px;
   z-index: 9;
 }
 
 .dialog-title {
   position: relative;
+  border-bottom: 1px solid #1464a5;
   h2 {
-    font-size: 20px;
+    font-size: 16px;
   }
   .main-menu {
     position: absolute;
     top: -5px;
     right: 0;
+    button {
+      margin-left: 18px;
+      height: 19px;
+      width: 19px;
+      line-height: 19px;
+    }
     .active { color: #1464a5; }
   }
 }
@@ -64,6 +81,11 @@
       margin: 24px;
       width: calc(100% - 48px);
       height: calc(100% - 48px);
+      max-width: 750px;
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
