--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/load-preferences-dialog/load-preferences-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/load-preferences-dialog/load-preferences-dialog.component.html
@@ -1,20 +1,25 @@
 <div mat-dialog-title class="dialog-title">
   <h3>{{ 'CHART_ON_DEMAND.LOAD_PREFERENCES.TITLE' | oChartTranslate }}</h3>
-  <button mat-icon-button aria-label="close dialog" mat-dialog-close>
-    <mat-icon>close</mat-icon>
+</div>
+<mat-dialog-content fxLayout="column" class="dialog-content-preferences">
+  <div mat-subheader class="subheader">{{ 'TABLE.DIALOG.APPLY_CONFIGURATION' | oTranslate }}</div>
+  <mat-selection-list #configurationList dense class="apply-configuration-dialog-list">
+    <mat-list-option checkboxPosition="before">
+      <span matLine>NAME</span>
+      <span matLine>DESCRIPTION</span>
+    </mat-list-option>
+  </mat-selection-list>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button type="button" mat-stroked-button
+    [disabled]="configurationList.selectedOptions.selected.length!==1" class="o-button-danger">
+    {{ 'DELETE' | oTranslate }}
   </button>
-</div>
-<div mat-dialog-content class="dialog-content">
-  <mat-form-field class="example-full-width">
-    <mat-selection-list #filterList dense class="o-table-load-filter-dialog-list">
-      <mat-list-option *ngFor="let filter of getPreferencesList() " [value]="filter.name" checkboxPosition="before">
-        <span matLine>{{ filter.name }}</span>
-        <span matLine>{{ filter.description }}</span>
-      </mat-list-option>
-      <mat-list-item *ngIf="emptyList">
-        <span class="empty-filter-list">{{ 'CHART_ON_DEMAND.LOAD_PREFERENCES.EMPTY_LIST' | oChartTranslate }}</span>
-      </mat-list-item>
-    </mat-selection-list>
-  </mat-form-field>
-  <o-button #submit label="{{ 'CHART_ON_DEMAND.LOAD_PREFERENCES.BUTTON_LABEL' | oChartTranslate }}" type="RAISED" (click)="loadPreferences()"></o-button>
-</div>
+  <span fxFlex></span>
+  <button type="button" mat-stroked-button [mat-dialog-close]="false" class="o-button-default">{{ 'CANCEL' | oTranslate
+    }}</button>
+  <button type="button" mat-stroked-button [mat-dialog-close]="true"
+    [disabled]="configurationList.selectedOptions.selected.length!==1" class="o-button-primary">{{ 'OK' | oTranslate
+    }}</button>
+</mat-dialog-actions>
