--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
@@ -1,12 +1,27 @@
 <div mat-dialog-title class="dialog-title">
   <h3>{{ 'CHART_ON_DEMAND.SAVE_PREFERENCES.TITLE' | oChartTranslate }}</h3>
-  <button mat-icon-button aria-label="close dialog" mat-dialog-close>
-    <mat-icon>close</mat-icon>
-  </button>
 </div>
-<div mat-dialog-content class="dialog-content">
-  <mat-form-field class="example-full-width">
-    <input [(ngModel)]="name" matInput placeholder="{{ 'CHART_ON_DEMAND.SAVE_PREFERENCES.INPUT_PLACEHOLDER' | oChartTranslate }}" required>
-  </mat-form-field>
-  <o-button #submit label="{{ 'CHART_ON_DEMAND.SAVE_PREFERENCES.BUTTON_LABEL' | oChartTranslate }}" type="RAISED" (click)="savePreferences()"></o-button>
-</div>
+<mat-dialog-content class="dialog-content-preferences">
+  <div mat-subheader class="subheader">{{ 'TABLE.DIALOG.SAVE_CONFIGURATION' | oTranslate }}</div>
+  <form #form fxLayout="column">
+    <mat-form-field>
+      <input [(ngModel)]="name" matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_NAME' | oTranslate }}"
+        formControlName="name" required>
+      <mat-error
+        text="{{ 'FORM_VALIDATION.REQUIRED' | oTranslate }}"></mat-error>
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <textarea matInput
+        placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_DESCRIPTION' | oTranslate }}" formControlName="description" rows="4"
+        cols="50"></textarea>
+    </mat-form-field>
+
+  </form>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="false" class="o-button-default">
+    {{ 'CANCEL' | oTranslate }}</button>
+  <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="true">{{
+    'SAVE' | oTranslate }}</button>
+</mat-dialog-actions>
