--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-as-dialog/save-preferences-as-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-as-dialog/save-preferences-as-dialog.component.html
@@ -2,7 +2,7 @@
   <h3>{{ 'CHART_ON_DEMAND.SAVE_PREFERENCES_AS.TITLE' | oChartTranslate }}</h3>
 </div>
 <mat-dialog-content>
-  <div mat-subheader>{{ 'DIALOG.SELECT_FUNCTION' | oTranslate }}</div>
+  <div mat-subheader>{{ 'CHART_ON_DEMAND.SELECT_PREFERENCE' | oTranslate }}</div>
   <form #form fxLayout="column">
     <mat-radio-group name="Function">
       <!-- <mat-radio-button *ngFor="let f of functions" name="Functions" [value]="f" style="margin: 10px">
