--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
@@ -5,15 +5,12 @@
   <div mat-subheader class="subheader">{{ 'TABLE.DIALOG.SAVE_CONFIGURATION' | oTranslate }}</div>
   <form #form fxLayout="column">
     <mat-form-field>
-      <input [(ngModel)]="name" matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_NAME' | oTranslate }}"
-        formControlName="name" required>
+      <input matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_NAME' | oTranslate }}" formControlName="name" required>
       <mat-error
         text="{{ 'FORM_VALIDATION.REQUIRED' | oTranslate }}"></mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-      <textarea matInput
-        placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_DESCRIPTION' | oTranslate }}" formControlName="description" rows="4"
-        cols="50"></textarea>
+      <textarea matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_DESCRIPTION' | oTranslate }}" formControlName="description" resize="none" rows="4" cols="50"></textarea>
     </mat-form-field>
 
   </form>
@@ -21,7 +18,9 @@
 
 <mat-dialog-actions align="end">
   <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="false" class="o-button-default">
-    {{ 'CANCEL' | oTranslate }}</button>
-  <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="true">{{
-    'SAVE' | oTranslate }}</button>
+    {{ 'CANCEL' | oTranslate }}
+  </button>
+  <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="true">
+    {{'SAVE' | oTranslate }}
+  </button>
 </mat-dialog-actions>
