--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/save-preferences-dialog/save-preferences-dialog.component.html
@@ -6,8 +6,7 @@
   <form #form fxLayout="column">
     <mat-form-field>
       <input matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_NAME' | oTranslate }}" formControlName="name" required>
-      <mat-error
-        text="{{ 'FORM_VALIDATION.REQUIRED' | oTranslate }}"></mat-error>
+      <mat-error>{{ 'FORM_VALIDATION.REQUIRED' | oTranslate }}</mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
       <textarea matInput placeholder="{{ 'TABLE.DIALOG.CONFIGURATION_DESCRIPTION' | oTranslate }}" formControlName="description" resize="none" rows="4" cols="50"></textarea>
